--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
         <meta name="referrer" content="never">
         <meta name="referrer" content="no-referrer">
         <link rel="shortcut icon" type="image/png" href="./hex.png"/>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
         <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
         <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css" integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ==" crossorigin=""/>
         <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js" integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew==" crossorigin=""></script>
-        <script src="./h3.js"></script>
+        <script src="https://unpkg.com/h3-js@4.1.0/dist/h3-js.umd.js"></script>
         <link rel="stylesheet" href="style.css" type="text/css" media="all">
         <script defer src="./map.js"></script>
     </head>
@@ -26,27 +27,68 @@
                 <form id="goto" v-on:submit.prevent="gotoLocation">
                     <div class="input-group has-validation">
                         <input type="text" class="form-control :invalid" v-model="gotoLatLon" placeholder="lat,lon" />
-                        <div class="input-group-append">
-                            <button type="submit" class="btn btn-primary">Go</button>
-                        </div>
+                        <button type="submit" class="btn btn-primary">Go</button>
                     </div>
                 </form>
 
                 <br />
 
-                <form id="goto" v-on:submit.prevent="findH3">
-                    <div class="input-group has-validation">
-                        <input type="text" class="form-control :invalid" v-model="searchH3Id" placeholder="valid H3 id" />
-                        <div class="input-group-append">
-                            <button type="submit" class="btn btn-primary">Find</button>
+                <form id="goto" v-on:change.prevent="selectH3Resolution">
+                    <div class="input-group">
+                        <span class="input-group-text text-bg-warning" for="h3res">H3 Resolution: </span>
+                        <select class="form-select" v-model="currentH3Res" id="h3res">
+                            <option value="0">0</option>
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="4">4</option>
+                            <option value="5">5</option>
+                            <option value="6">6</option>
+                            <option value="7">7</option>
+                            <option value="8">8</option>
+                            <option value="9">9</option>
+                            <option value="10">10</option>
+                            <option value="11">11</option>
+                            <option value="12">12</option>
+                            <option value="13">13</option>
+                            <option value="14">14</option>
+                            <option value="15">15</option>
+                        </select>
+                    </div>
+                </form>
+
+                <br />
+
+                <form id="goto" v-on:submit.prevent="findSelectedH3IDs">
+                    <div class="form-floating">
+                        <textarea class="form-control" v-bind:class="selectedH3IDsError.length == 0 ? '' : 'is-invalid'" v-model="selectedH3IDs" id="selectedIndexes" data-bs-toggle="tooltip" data-bs-placement="left" data-bs-title="Valid comma separated H3 IDs, all with the same resolution." style="height: 100px"></textarea>
+                        <label for="selectedIndexes" class="form-label" placeholder="Valid H3 id">Show Indexes</label>
+                        <div class="invalid-feedback">
+                            {{ selectedH3IDsError }}
                         </div>
+                    </div>
+                    <div class="d-grid gap-2">
+                        <button type="submit" class="btn submit-btn" v-bind:class="selectedH3IDsError.length == 0 ? 'btn-primary' : 'btn-danger'">Find</button>
                     </div>
                 </form>
 
                 <hr />
-                Current H3 resolution: <b>{{ currentH3Res }}</b>
-                <hr />
                 <small class="text-muted">Tip: Clicking an H3 cell will copy its id to the clipboard.</small>
+                <hr />
+                <form id="goto" v-on:submit.prevent="copyLinkToClipboard">
+                    <div class="form-floating">
+                        <textarea class="form-control" v-model="dumpSelected" id="dumpSelected" placeholder="Valid H3 id" disabled data-bs-toggle="tooltip" data-bs-placement="left" data-bs-title="Hold Ctrl Key while clicking on a Hexagon to append its ID here."></textarea>
+                        <label for="dumpSelected" class="form-label">Selected Indexes</label>
+                    </div>
+                    <div class="d-grid gap-2">
+                        <button type="submit" class="btn btn-warning submit-btn" v-show="dumpSelected.length > 0">Copy link selected IDs</button>
+                    </div>
+                </form>
+                <form id="goto" v-on:submit.prevent="clearSelected">
+                    <div class="d-grid gap-2">
+                        <button type="submit" class="btn btn-success submit-btn" v-show="dumpSelected.length > 0">Clear selected IDs</button>
+                    </div>
+                </form>
             </div>
 
         </div>
